Java11 compat: Don't use clazz.newInstance()